# function-finder

./: .gitignore  CHANGELOG.md  function-finder.cabal
src/: ConstraintSolver.hs  HasFunction.hs
test/: Main.hs  PolyKinded.hs
