cabal-version:       2.0

name:                function-finder
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Sreenidhi
maintainer:          nair.sreenidhi@gmail.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     ConstraintSolver
                       HasFunction
  -- other-modules:
  -- other-extensions:
  build-depends:       base      >= 4.10 && < 5
                     , ghc
                     , hashable  == 1.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 
  

test-suite function-finder-test
  type:             exitcode-stdio-1.0           
  hs-source-dirs:   test
  main-is:          Main.hs

  build-depends:    base            >= 4.10 && < 5
                  , function-finder
                  , tasty
                  , tasty-hunit
                                    
  ghc-options:      -Wall -Werror -O2 
  
     